# deep-research-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/deep_research_bot/: config.py  deep_research.py  main.py  model_client.py  models.py  prompts.py
src/deep_research_bot/agents/: __init__.py  clarifier_agent.py  planner_agent.py  review_agent.py  search_agent.py  writer_agent.py
src/deep_research_bot/core/: config.py
src/deep_research_bot/llm/: model_client.py
